2008-09-23  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Darin Adler. Landed by Jan Alonzo.

        Added support for getImageData() and putImageData()
        to Cairo.

        [CAIRO] needs getImageData and putImageData support
        https://bugs.webkit.org/show_bug.cgi?id=20838

        * platform/graphics/cairo/ImageBufferCairo.cpp:
        (WebCore::ImageBuffer::ImageBuffer):
        (WebCore::ImageBuffer::getImageData):
        (WebCore::ImageBuffer::putImageData):

Canonical link: https://commits.webkit.org/29087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36813 268f45cc-cd09-0410-ab3c-d52691b4dbfc